chore: fix docs scrollbars (#275)
* docs: scrollbars styles

* docs: fix scrollbar in code with line highlight

* docs: hide horizontal scrollbar in body

--- a/packages/.vitepress/theme/styles/code.css
+++ b/packages/.vitepress/theme/styles/code.css
@@ -86,6 +86,7 @@ li > div[class*='language-'] {
   font-family: var(--code-font-family);
   font-size: var(--code-font-size);
   user-select: none;
+  overflow: hidden;
 }
 
 .highlight-lines .highlighted {
